--- a/AdnAlquilerEspacio/app/src/main/res/values/colors.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="red">#fa163f</color>
+    <color name="green">#21bf73</color>
+    <color name="white">#ffffff</color>
+
+
 </resources>
