--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_moto.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_moto.xml
@@ -4,6 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <data>
+
+
+    </data>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
