--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
@@ -1,8 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-</LinearLayout>
+    <data>
+        <variable
+            name="callback"
+            type="com.adn.adnalquilerparqueadero.utilities.Callback" />
+
+
+        <variable
+            name="motoViewModel"
+            type="com.adn.adnalquilerparqueadero.infraestructura.viewModel.MotoViewModel" />
+
+
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/button_agregar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="@{()->callback.click()}"
+            android:text="Agregar" />
+    </LinearLayout>
+</layout>
