--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_auto.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_auto.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentacion.fragmentos.MotoFragment">
+        tools:context=".presentacion.fragmentos.MotoListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewMoto"
