--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_moto.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_moto.xml
@@ -3,26 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <data>
-        <variable
-            name="existeMoto"
-            type="boolean" />
-
         <variable
             name="viewModel"
             type="com.adn.adnalquilerparqueadero.infraestructura.viewModel.AlquilerMotosListViewModel" />
         <variable
             name="callback"
             type="com.adn.adnalquilerparqueadero.utilities.Callback" />
-
+        <variable
+            name="tieneParqueos"
+            type="boolean" />
     </data>
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentacion.fragmentos.MotoFragment">
+        tools:context=".presentacion.fragmentos.MotoListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewMotos"
@@ -30,6 +26,7 @@
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             app:spanCount="3"
+            app:isGone="@{!tieneParqueos}"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="-1dp"
             tools:listitem="@layout/motocicleta_item">
@@ -37,16 +34,12 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:orientation="vertical"
-            app:isGone="@{existeMoto}">
+            app:isGone="@{tieneParqueos}"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/empty_garden"
@@ -55,13 +48,11 @@
                 android:text="No hay motocicletas"
                 android:textAppearance="?attr/textAppearanceHeadline5" />
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:id="@+id/add_plant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorPrimary"
-                android:text="Agregar moto"
-                app:backgroundTint="?attr/colorOnPrimary"/>
+                android:text="Agregar moto"/>
 
         </LinearLayout>
 
@@ -75,7 +66,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:clickable="true"
-            android:onClick="@{() -> callback.click()}"
             app:layout_constraintVertical_bias="0.982"
             app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />
 
