--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_descripcion.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_descripcion.xml
@@ -1,10 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentacion.fragmentos.DescripcionFragment">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.adn.adnalquilerparqueadero.infraestructura.viewModel.DetalleMotoVehiculoViewModel" />
+
+        <variable
+            name="callback"
+            type="com.adn.adnalquilerparqueadero.utilities.Callback" />
+
+    </data>
+
+
+    <androidx.cardview.widget.CardView
+        android:orientation="vertical"
+        android:layout_margin="@dimen/dimmen5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
 
 
 
-</FrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <ImageView
+                    android:layout_width="@dimen/dimmen60"
+                    android:layout_height="@dimen/dimmen60"
+                    android:src="@drawable/ic_motorcycle_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimmen5"
+                    android:fontFamily="@font/roboto_regular"
+                    android:text="@{viewModel.alquiler.vehiculo.placa}" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimmen5"
+                    android:fontFamily="@font/roboto_regular"
+                    android:text="@{viewModel.alquiler.vehiculo.placa}" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimmen5"
+                    android:fontFamily="@font/roboto_regular"
+                    android:text="@{viewModel.alquiler.horaLlegada.toString()}" />
+
+
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/btn_pagar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                isGone="@{!viewModel.alquiler.estaActivo}"
+                android:text="PAGAR"
+                >
+
+
+            </Button>
+
+        </LinearLayout>
+
+
+
+
+
+    </androidx.cardview.widget.CardView>
+
+</layout>
