--- a/AdnAlquilerEspacio/app/src/main/res/layout/motocicleta_item.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/motocicleta_item.xml
@@ -7,11 +7,17 @@
             name="clickListener"
             type="android.view.View.OnClickListener"/>
 
+
+        <variable
+            name="alquiler"
+            type="com.adn.adnalquilerparqueadero.infraestructura.db.entidades.AlquilerEntidad"/>
+
     </data>
 
     <androidx.cardview.widget.CardView
         android:orientation="vertical"
         android:layout_margin="@dimen/dimmen5"
+        android:onClick="@{clickListener}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -34,13 +40,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimmen5"
                 android:fontFamily="@font/roboto_regular"
-                android:text="200 CC" />
+                android:text="@{alquiler.vehiculo.placa}" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DX068E"
+                android:text="@{alquiler.vehiculo.placa}"
                 android:layout_marginTop="@dimen/dimmen5"
                 android:fontFamily="@font/roboto_regular" />
 
@@ -50,7 +56,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimmen5"
                 android:fontFamily="@font/roboto_regular"
-                android:text="1/25/2020" />
+                android:text="@{alquiler.horaLlegada.toString()}"
+                />
 
 
         </LinearLayout>
