Eliminacion de fragmentos innecesarios

--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="motoViewModel"
-            type="com.adn.adnalquilerparqueadero.infraestructura.viewModel.MotoViewModel" />
+            type="com.adn.adnalquilerparqueadero.infraestructura.viewModel.VehiculoViewModel" />
 
 
     </data>
