--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_descripcion.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_descripcion.xml
@@ -50,6 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimmen5"
+                    android:text="@{viewModel.alquiler.vehiculo.cc.toString()}"
                     android:fontFamily="@font/roboto_regular" />
 
 
@@ -57,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimmen5"
+                    android:text="@{viewModel.alquiler.vehiculo.placa}"
                     android:fontFamily="@font/roboto_regular"/>
 
 
@@ -64,6 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimmen5"
+                    android:text="@{viewModel.alquiler.vehiculo.cc}"
                     android:fontFamily="@font/roboto_regular"/>
 
 
