--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
@@ -16,13 +16,13 @@
     </data>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editext_placa"
@@ -37,7 +37,7 @@
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editext_cc"
@@ -49,14 +49,18 @@
 
 
         </com.google.android.material.textfield.TextInputLayout>
-
-
-
+        <Spinner
+            android:id="@+id/spinnerVehiculos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/button_agregar"
-            android:layout_width="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:onClick="@{()->callback.click()}"
             android:text="Agregar" />
