actualizacion de pago

--- a/AdnAlquilerEspacio/app/src/main/res/layout/vehiculo_item.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/vehiculo_item.xml
@@ -15,7 +15,7 @@
 
         <variable
             name="alquiler"
-            type="com.adn.adnalquilerparqueadero.infraestructura.db.entidades.AlquilerEntidad"/>
+            type="com.adn.adnalquilerparqueadero.dominio.modelo.Alquiler"/>
 
     </data>
 
