--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_descripcion.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_descripcion.xml
@@ -4,9 +4,6 @@
 
     <data>
 
-
-
-
         <variable
             name="viewModel"
             type="com.adn.adnalquilerparqueadero.infraestructura.viewModel.DetalleMotoVehiculoViewModel" />
@@ -26,13 +23,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="20dp"
@@ -95,7 +92,7 @@
             <Button
                 android:id="@+id/btn_pagar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:enabled="@{!viewModel.pago}"
                 android:text="PAGAR">
             </Button>
