--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_dialog.xml
@@ -30,7 +30,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editext_placa"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:maxLength="6"
                 android:inputType="textEmailAddress"
                 android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"
@@ -49,7 +49,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editext_cc"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="number"
                 android:tooltipText="200"
                 android:maxLength="4"
