--- a/AdnAlquilerEspacio/app/src/main/res/layout/fragment_vehiculo.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/fragment_vehiculo.xml
@@ -29,6 +29,7 @@
         </androidx.recyclerview.widget.RecyclerView>
 
         <LinearLayout
+            android:id="@+id/ll_no_vehiculos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
