--- a/AdnAlquilerEspacio/app/src/main/res/layout/vehiculo_item.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/layout/vehiculo_item.xml
@@ -50,6 +50,7 @@
 
 
             <TextView
+                android:id="@+id/text_placa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{alquiler.vehiculo.placa}"
